new bower libs, api and main front application structure

--- a/src/AppBundle/DataFixtures/ORM/fixtures/albums.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures/albums.yml
@@ -1,13 +1,13 @@
-galeries:
-  "Gallery 1":
+albums:
+  "Album 1":
     "image_number": 5
-  "Gallery 2":
+  "Album 2":
     "image_number": 25
-  "Gallery 3":
+  "Album 3":
     "image_number": 37
-  "Gallery 4":
+  "Album 4":
     "image_number": 23
-  "Gallery 5":
+  "Album 5":
     "image_number": 27
 images:
   - "image.jpg"
