--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,3 +70,33 @@ assetic:
         coffee:
             bin: /usr/local/bin/coffee
             node: /usr/local/bin/node
+
+fos_rest:
+    param_fetcher_listener: true
+    allowed_methods_listener: true
+    body_converter:
+        enabled: true
+    routing_loader:
+        default_format:       json
+        include_format:       false
+    serializer:
+        groups:               [external]
+        serialize_null:       false
+    view:
+        view_response_listener: 'force'
+        default_engine:       twig
+        formats:
+            json: true
+            xml:  true
+            html: true
+    format_listener:
+        rules:
+            - { path: '^/api', priorities: [ 'json'], fallback_format: json, prefer_extension: true }
+            - { path: '^/', priorities: [ 'html'], fallback_format: html, prefer_extension: true }
+
+jms_serializer:
+    metadata:
+        directories:
+            FOSUB:
+                namespace_prefix: "AppBundle"
+                path: "@AppBundle/Resources/config/serializer/"
