--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "jms/serializer": "^1.3",
         "symfony/assetic-bundle": "^2.8",
         "symfony/filesystem": "^3.1",
-        "symfony/finder": "^3.1"
+        "symfony/finder": "^3.1",
+        "jms/serializer-bundle": "^1.1",
+        "friendsofsymfony/rest-bundle": "^2.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
