api fixes, pagination, and design

--- a/src/AppBundle/DataFixtures/ORM/fixtures/albums.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures/albums.yml
@@ -10,5 +10,8 @@ albums:
   "Album 5":
     "image_number": 27
 images:
-  - "image.jpg"
-  - "image2.jpg"
+  - "1.jpg"
+  - "2.jpg"
+  - "3.jpg"
+  - "4.jpg"
+  - "5.jpg"
