--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,7 +69,7 @@ assetic:
     filters:
         coffee:
             bin: "%kernel.root_dir%/../node_modules/coffee-script/bin/coffee"
-#            node: /usr/local/bin/node
+            node: /usr/local/bin/node
 
 fos_rest:
     param_fetcher_listener: true
